# cursedtris

./: CMakeLists.txt
include/: tetris.hpp  window.hpp
src/: main.cpp  tetris.cpp  window.cpp
